@@ -1,3 +1,8 @@
+Mon Nov 22 12:46:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dance/DAnCE_Utility.cpp:
+          Fixed logging
+
 Mon Nov 22 10:18:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dance/DAnCE_Utility.h:
